# speech

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  Package.swift  README.md  build_app.sh  index.html  package.json  release.sh  test_local.sh  tsconfig.json  vite.config.ts
Sources/: AppDelegate.swift  AppState.swift  SpeechApp.swift  UpdateManager.swift
Sources/Hotkeys/: HotkeyManager.swift
Sources/Injection/: TextInjector.swift
Sources/Recording/: AudioRecorder.swift
Sources/Resources/: AppIcon.icns
Sources/Transcription/: TextCleaner.swift  WhisperService.swift
Sources/UI/: HotkeyRecorderView.swift  MenuBarIcon.swift  MenuBarView.swift  RecordingOverlay.swift  SettingsView.swift  SettingsWindowController.swift  SwitchOverlayController.swift
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  text_cleaner.rs  tray.rs
src-tauri/src/commands/: audio.rs  mod.rs  model.rs  permissions.rs  profiles.rs  settings.rs  state.rs  update.rs
src-tauri/src/managers/: audio.rs  hotkey.rs  mod.rs  model.rs  paste.rs  permissions.rs  settings.rs  transcription.rs  update.rs
src/components/: MenuBarPanel.svelte  TranscriptionRow.svelte
src/lib/: types.ts
src/overlay/: AudioWaveform.svelte  RecordingOverlay.svelte  SwitchOverlay.svelte
src/settings/: GeneralTab.svelte  HotkeyRecorder.svelte  ModelTab.svelte  PermissionsTab.svelte  ProfileCard.svelte  ProfilesTab.svelte  SettingsWindow.svelte
