[package]
name = "speech"
version = "3.1.1"
description = "macOS menu bar app for speech-to-text"
authors = ["kennetkusk"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "speech_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-macos-permissions = "2.3"

# Transcription
whisper-rs = { version = "0.15", features = ["metal"] }

# Audio
cpal = "0.16"
hound = "3.5"

# macOS native
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"

# Clipboard
arboard = "3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (model downloads)
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Utilities
regex = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
libc = "0.2"
